Resolve unchecked assignments and ClassCastException by improving type safety