@@ -7,9 +7,9 @@ import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
 
-public class DetachedAssociationFunction implements Function<Query.Criterion, List<DetachedAssociationCriteria>> {
+public class DetachedAssociationFunction implements Function<Query.Criterion, List<DetachedAssociationCriteria<?>>> {
     @Override
-    public List<DetachedAssociationCriteria> apply(Query.Criterion o) {
+    public List<DetachedAssociationCriteria<?>> apply(Query.Criterion o) {
         List<Query.Criterion> criteria;
         if (o instanceof Query.In c && Objects.nonNull(c.getSubquery()) ) {
             criteria = c.getSubquery().getCriteria();
@@ -23,8 +23,8 @@ public class DetachedAssociationFunction implements Function<Query.Criterion, Li
             criteria = List.of(o);
         }
         return criteria.stream()
-                .filter(DetachedAssociationCriteria.class::isInstance)
-                .map(DetachedAssociationCriteria.class::cast)
-                .toList();
+                .filter(it -> it instanceof DetachedAssociationCriteria)
+                .map(it -> (DetachedAssociationCriteria<?>) it)
+                .collect(java.util.stream.Collectors.toList());
     }
 }
